2007-08-25  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (do_3dplot):  Revise handling of the key title to match
	the 2D code.  Honor key title font, fix incomplete horizontal line in
	key box if there are multiple columns of key entries.

	* term/gd.trm (PNG_vector):  Better accounting of when the grid linetype
	needs to be refreshed. 
	Bug #1780449

2007-08-20  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/gp_cairo.c (gp_cairo_draw_polygon,
	gp_cairo_end_polygon): Introduce a small piece of code, unused, but
	illustrative of the way the "saturate" operator is used to draw pm3d
	polygons without seams.

	* src/wxterminal/gp_cairo.c (gp_cairo_fill_pattern): Do not use
	negative coordinates to create hash patterns. This gives corruption
	with recent cairo versions (1.4.10 for example). Instead create them
	with rotations and scaling.
	Also scale the linewidth of the patterns with PATTERN_SIZE instead
	of its inverse.

	* src/wxterminal/gp_cairo.c:
	* src/wxterminal/gp_cairo.h:
	* src/wxterminal/wxt_gui.cpp:
	* term/cairo.trm:
	Disable the use of the SATURATE operator for the cairopdf terminal,
	keep using it for wxt. That way no bitmap fallbacks are used for pm3d
	polygons in the	pdf, however they are rendered with seams as in the
	current libpdf terminal or in the svg terminal.

2007-08-18  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/save.c (save_range):  The output of "show <foo>range" lists the
	current value in a comment.  However, up until now the value listed was
	not really the current value.  Fix this.
	Bug #1731160

2007-08-17  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Remove extraneous {} from entry for 'set timestamp'.
	The offset must not begin with a leading comma.

2007-08-12  Ethan Merritt  <merritt@u.washington.edu>

	* src/color.c (cbtick_callback)
	src/graph3d.c (xtick_callback ytick_callback ztick_callback)
	src/graphics.c (xtick2d_callback ytick2d_callback):