@@ -1,3 +1,7 @@
+2007-08-26  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/axis.c src/gadgets.c (apply_pm3dcolor): Remove dead code.
+
 2007-08-25  Ethan Merritt  <merritt@u.washington.edu>
 
 	* src/graph3d.c (do_3dplot):  Revise handling of the key title to match
